--- a/index.html
+++ b/index.html
@@ -3,11 +3,159 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-
+    <header class="header flex-container">
+      <div class="logo logo_place_header"></div>
+      <h2 class="header__title">Научиться учиться</h2>
+      <div class="header__subtitle">Какие современные и эффективные подходы  к обучению вы можете использовать в своей жизни? <a class="header__link link" href="#">Узнать </a></div>
+      <img class="header__main-illustration" src="images/header-image.png" alt="Deuce again">
+      <div class="header__square-pic"></div>
+    </header>
+    <div class="content">
+      <section class="description">
+        <div class="two-columns flex-container">
+          <h5 class="two-columns__brief">Главные проблемы в обучении</h5>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </div>
+            <div class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </div>
+            <div class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в практикуме.
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h3 class="section-title centered-block">Цифры и факты</h3>
+        <h4 class="section-subtitle centered-block">Про учёбу и мозг</h4>
+        <div class="table flex-container centered-block">
+          <div class="table__cell">
+            <div class="table__heading">86 миллиардов</div>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">2,1 миллиарда</div>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text">Объем памяти человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text">Число ответсвенных</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">420 миллионов </div>
+            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
+            <div class="table__text">Всемирный банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">17-20 лет</div>
+            <div class="table__text">Пик обучаемости</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1885 год</div>
+            <div class="table__text">Открытие кривой забывания</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1889 год</div>
+            <div class="table__text">Открытие условного рефлекса</div>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title centered-block">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle centered-block">Выучить и не забыть</h3>
+        <a class="feynman__link link" href="#">Подробнее </a>
+        <div class="feynman-circle-pic"></div>
+      </section>
+      <section class="kaufman">
+        <h3 class="section-title section-title_theme_dark centered-block">Принципы обучения</h3>
+        <h4 class="section-subtitle section-subtitle_theme_dark centered-block">от Джоша Кауфмана</h4>
+        <div class="table table_theme_dark flex-container centered-block">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">1</div>
+            <div class="table__text table__text_theme_dark">Выберите привлекательный проект</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">2</div>
+            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">3</div>
+            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">4</div>
+            <div class="table__text table__text_theme_dark">Разбейти навык на элементы</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">5</div>
+            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">6</div>
+            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">7</div>
+            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">8</div>
+            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">9</div>
+            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">10</div>
+            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</div>
+          </div>
+          <div class="kaufman__triangle">
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="footer__columns flex-container centered-block">
+          <div class="footer__column footer__column_content_copyright flex-container">
+            <div class="logo logo_place_footer"></div>
+            <div class="footer__author">&copy; Евгения Абрамович</div>
+          </div>
+          <div class="footer__column footer__column_content_info">
+            <div class="footer__column-heading">О практикуме</div>
+            <nav>
+              <ul class="footer__column-links">
+                <li><a class="footer__column-link" href="#">Главная</a></li>
+                <li><a class="footer__column-link" href="#">Концепция</a></li>
+                <li><a class="footer__column-link" href="#">Наставники</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <div class="footer__column-heading">Соцсети</div>
+            <nav>
+              <ul class="footer__column-links">
+                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Youtube">Youtube</a></li>
+                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВК">BКонтакте</a></li>
+                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
