the alt parameter for images have replaced with the Russian equivalent

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo logo_place_header"></div>
       <h2 class="header__title">Научиться учиться</h2>
       <div class="header__subtitle">Какие современные и эффективные подходы  к обучению вы можете использовать в своей жизни? <a class="header__link link" href="#">Узнать </a></div>
-      <img class="header__main-illustration" src="images/header-image.png" alt="Deuce again">
+      <img class="header__main-illustration" src="images/header-image.png" alt="Картина - Опять двойка">
       <div class="header__square-pic"></div>
     </header>
     <div class="content">
@@ -147,9 +147,9 @@
             <div class="footer__column-heading">Соцсети</div>
             <nav>
               <ul class="footer__column-links">
-                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Youtube">Youtube</a></li>
+                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Ютуб">Youtube</a></li>
                 <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВК">BКонтакте</a></li>
-                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
+                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="ТикТок">TikTok</a></li>
               </ul>
             </nav>
           </div>
