--- a/index.html
+++ b/index.html
@@ -9,153 +9,156 @@
 </head>
 <body>
   <div class="page">
-    <header class="header flex-container">
+    <header class="header">
       <div class="logo logo_place_header"></div>
-      <h2 class="header__title">Научиться учиться</h2>
-      <div class="header__subtitle">Какие современные и эффективные подходы  к обучению вы можете использовать в своей жизни? <a class="header__link link" href="#">Узнать </a></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы  к обучению вы можете использовать в своей жизни? <a class="header__link link" href="#">Узнать </a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Картина - Опять двойка">
       <div class="header__square-pic"></div>
     </header>
-    <div class="content">
-      <section class="description">
-        <div class="two-columns flex-container">
-          <h5 class="two-columns__brief">Главные проблемы в обучении</h5>
+    <main class="content">
+      <section aria-label="Главные проблемы в обучении" class="description">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-            </div>
-            <div class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </div>
-            <div class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в практикуме.
-            </div>
+            </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h3 class="section-title centered-block">Цифры и факты</h3>
-        <h4 class="section-subtitle centered-block">Про учёбу и мозг</h4>
-        <div class="table flex-container centered-block">
-          <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">2,1 миллиарда</div>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объем памяти человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответсвенных</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">420 миллионов </div>
-            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-            <div class="table__text">Всемирный банк, 2017</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">17-20 лет</div>
-            <div class="table__text">Пик обучаемости</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text">Открытие кривой забывания</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text">Открытие условного рефлекса</div>
-          </div>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <div class="table">
+          <ul>
+            <li class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный банк, 2017</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объем памяти человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число ответсвенных</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">420 миллионов </h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный банк, 2017</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">17-20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="feynman">
-        <h2 class="feynman__title centered-block">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle centered-block">Выучить и не забыть</h3>
-        <a class="feynman__link link" href="#">Подробнее </a>
-        <div class="feynman-circle-pic"></div>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a class="feynman__link link" href="#" target="_blank">Подробнее </a>
       </section>
       <section class="kaufman">
-        <h3 class="section-title section-title_theme_dark centered-block">Принципы обучения</h3>
-        <h4 class="section-subtitle section-subtitle_theme_dark centered-block">от Джоша Кауфмана</h4>
-        <div class="table table_theme_dark flex-container centered-block">
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">1</div>
-            <div class="table__text table__text_theme_dark">Выберите привлекательный проект</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">2</div>
-            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">3</div>
-            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">4</div>
-            <div class="table__text table__text_theme_dark">Разбейти навык на элементы</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">5</div>
-            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">6</div>
-            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">7</div>
-            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">8</div>
-            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">9</div>
-            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами</div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">10</div>
-            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</div>
-          </div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
+          <ul>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Разбейти навык на элементы</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами</p>
+            </li>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</p>
+            </li>
+          </ul>
           <div class="kaufman__triangle">
           </div>
         </div>
       </section>
-      <footer class="footer">
-        <div class="footer__columns flex-container centered-block">
-          <div class="footer__column footer__column_content_copyright flex-container">
-            <div class="logo logo_place_footer"></div>
-            <div class="footer__author">&copy; Евгения Абрамович</div>
-          </div>
-          <div class="footer__column footer__column_content_info">
-            <div class="footer__column-heading">О практикуме</div>
-            <nav>
-              <ul class="footer__column-links">
-                <li><a class="footer__column-link" href="#">Главная</a></li>
-                <li><a class="footer__column-link" href="#">Концепция</a></li>
-                <li><a class="footer__column-link" href="#">Наставники</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="footer__column footer__column_content_social">
-            <div class="footer__column-heading">Соцсети</div>
-            <nav>
-              <ul class="footer__column-links">
-                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Ютуб">Youtube</a></li>
-                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВК">BКонтакте</a></li>
-                <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="ТикТок">TikTok</a></li>
-              </ul>
-            </nav>
-          </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; Евгения Абрамович</p>
         </div>
-      </footer>
-    </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О практикуме</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#">Главная</a></li>
+              <li><a class="footer__column-link" href="#">Концепция</a></li>
+              <li><a class="footer__column-link" href="#">Наставники</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Ютуб">Youtube</a></li>
+              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВК">BКонтакте</a></li>
+              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="ТикТок">TikTok</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
